@@ -108,6 +108,8 @@ FIXES
 
  * Tab Note: differences in behavior than other tab
 
+ * View note details tab grid button doesn't show card notes
+
 
 
 
